--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "mongoose": "^7.0.3",
     "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
